<?xml version="1.0"?>
<package>
  <name>controllers_dynamixel_command</name>
  <version>0.1.0</version>
  <description>The controllers_dynamixel_command package</description>
  <license>Apache License 2.0</license>
  <author email="davincioh@gmail.com">Davinci Oh</author>
  <maintainer email="davincioh@gmail.com">Davinci Oh</maintainer>
  <url type="repository">https://github.com/davincioh/dynamixel_workbench_client.git</url>
  <url type="website">http://davincioh.tistory.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export></export>
</package>